assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Special+Elite&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: Oswald, sans-serif;
    font-weight: 300;
    color: #252126;
    background-color: #FFFBCE;
}

/*Logo*/
#logo {
    font-family: "Special Elite", Oswald, sans-serif;
    font-size: 320%;
    font-weight: 200;
    color: #252126;
    float: left;
    margin: 10px;
}

/*nav menu*/
#menu {
    height: 30px;
    right: 5%;
    margin: 5px 10px;
    position: fixed;
}

#menu li {
    background-color: rgb(123, 71, 64, .4);
    display: inline;
    padding: 0 3px;
    margin: 0 2px;
    border-radius: 5px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid #252126;
}

.active {
    border-bottom: 1px solid #252126;
}


/*allign position of logo and nav menu*/

#logo,
#menu {
    line-height: 75px;
}

/*hero image*/

#hero-image {
    width: 100%;
    height: 600px;
    background: url(../images/domenicomondelliheroimage.png) no-repeat top center;
    background-size: cover;

}

#hero-container {
    height: 600px;
    width: 100%;
    clear: both;
    position: relative;
}

#cover-text h2 {
    color: #ECF5CE;
}

#cover-text {
    font-weight: lighter;
    font-style: italic;
    padding: 40px 10px;
    background-color: rgb(123, 71, 64, .4);

    bottom: 20%;
    left: 20%;

    position: absolute;
}

/*bio section*/

#left-column {
    padding-top: 30px;
    width: 50%;
    height: 600px;
    float: left;
}

#right-column {
    padding-top: 30px;
    width: 50%;
    height: 600px;
    float: right;
}

#left-column div {
    width: 80%;
    height: 25%;
    text-align: center;
    float: right;
    padding: 10px;
    margin: 0 5% 10% 5%;
    background-color: #C7A936;
    border-radius: 5px;
}

#right-column div {
    width: 80%;
    height: 25%;
    text-align: center;
    float: left;
    padding: 10px;
    margin: 10% 5% 0 5%;
    background-color: #386C5F;
    border-radius: 5px;

}

#summary p {
    padding: 20px 5px;
}

/*expand community section*/

.expand-community {
    width: 100%;
    margin-top: 50px;
    text-align: center;
    clear: both;
}

.documentation {
    width: 20%;
    float: left;
    background-color: #386C5F;
}

.event {
    width: 20%;
    float: right;
    background-color: #C7A936;
}

.documentation:hover {
    width: 50%;
}

.event:hover {
    width: 50%;
}

/*footer*/

footer {
    background-color: rgb(123, 71, 64);
    clear: both;
}

.social-networks {
    text-align: center;
}

.social-networks>li {
    display: inline;
}

.social-networks i {
    color: #3a3a3a;
    font-size: 160%;
    margin: 1%;
    padding: 5%;
}

/*bio table*/

#bio {
    clear: both;
}

#bio-table {
    width: 30%;
    float: left;
    border: #252126 2px solid;
}

#passport {
    width: 30%;
    height: 350px;
    background: url(../images/passaport.jpg) no-repeat center center;
    background-size: cover;
}

#bio-table tr {
    line-height: 30px;
}

#bio-table tr th {
    background-color: rgb(123, 71, 64, .4);
    border-radius: 5px;
}

#bio-table tr td {
    background-color: rgb(199, 169, 54, .4);
    border-radius: 5px;
}

#bio-table .table-heder {
    column-span: 2;
    text-align: center;
    background-color: rgb(56, 108, 95, .4);
}

/*bio paragraph*/
h1 {
    text-align: center;
}

.card-left {
    width: 60%;
    text-align: left;
    padding: 20px;
    margin: 20px;
    float: left;
    background-color: #386C5F;
    border-radius: 5px;
}

.card-right {
    width: 60%;
    text-align: center;
    padding: 20px;
    margin: 20px;
    float: right;
    background-color: #C7A936;
    border-radius: 5px;
}


p {
    line-height: 30px;
    font-size: 20px;
    vertical-align: middle;
    display: inline;
}

img {
    width: 200px;
    height: 200px;
    margin: 5px auto;
}

.img-left {
    float: left;
}

.img-right {
    float: right;
}

/*style for all figure caption and a ref*/

figcaption {
    text-align: center;
}

a {
    color: #3a3a3a;
    text-decoration: none;
}

a:hover {
    color: #C7A936;
}

/*now all a element whit gold background are visible*/
.img-left a:hover,
#left-column div p a:hover {
    color: #386C5F;
}

/*honors sector*/
#medals {
    clear: both;
    text-align: center;
}

#medals details {
    padding: 10px 5px;
    margin: 0 2px;
    font-size: 25px;

}

#medals a img {
    width: 150px;
    height: 50px;
    margin: 5px;
}

/*form page*/

#form {
    clear: both;
}

input,
textarea,
label {
    line-height: 30px;
    text-align: center;
    margin: 5px;
}

textarea {
    resize: none;
    width: 90%;
}

label {
    font-weight: 600;
    float: left;
    width: 20%;
    margin-top: 6px;
}

input,
extarea {
    float: left;
    width: 70%;
    margin-top: 6px;
}


legend {
    font-weight: 700;
    text-align: center;
}

fieldset {

    border: black 2px solid;
    border-radius: 5px;
}

